test/lit/pto/issue546_tfillpad_mat_mismatch_diag.pto
// RUN: not ptoas --pto-arch=a3 --enable-insert-sync %s -o - 2>&1 | FileCheck %s

module {
  func.func @issue546_tfillpad_mat_mismatch(
      %src: !pto.tile_buf<loc=mat, dtype=bf16, rows=16, cols=64, v_row=?, v_col=?, blayout=col_major, slayout=row_major, fractal=512, pad=0>,
      %dst: !pto.tile_buf<loc=mat, dtype=bf16, rows=16, cols=64, v_row=16, v_col=64, blayout=col_major, slayout=row_major, fractal=512, pad=1>) {
    pto.tfillpad ins(%src : !pto.tile_buf<loc=mat, dtype=bf16, rows=16, cols=64, v_row=?, v_col=?, blayout=col_major, slayout=row_major, fractal=512, pad=0>)
                 outs(%dst : !pto.tile_buf<loc=mat, dtype=bf16, rows=16, cols=64, v_row=16, v_col=64, blayout=col_major, slayout=row_major, fractal=512, pad=1>)
    return
  }
}

// CHECK: error: expects src/dst tile types to be lowerable to TFILLPAD for loc=mat
// CHECK-SAME: mismatching fields: v_row (? vs 16), v_col (? vs 64), pad (0 vs 1)
// CHECK: note: heterogeneous TFILLPAD overload is only available for loc=vec
